fix spacing on icon tiles

--- a/css/makemepretty.css
+++ b/css/makemepretty.css
@@ -994,7 +994,7 @@ audio:focus {
 
 .flex-process-box{
     max-width: 15%;
-    min-width: 100px;
+    min-width: 15%;
     display: block;
     align-content: center;
     background: #d6d6d6;
